[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["koshka"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
icecream = "^2.1.0"
markdownify = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
